store app front end component designs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,18 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!--The whole content below can be removed with the new code.-->
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{title}}!!
   </h1>
   ... Starter Files ...
-</div>
+</div> -->
+
+<nav class='navbar navbar-expand navbar-light bg-light'>
+       <a class='navbar-brand'>{{pageTitle}}</a>
+       <ul class='nav navbar-nav'>
+         <li><a class='nav-link' [routerLink]="['/welcome']">Home</a></li>
+         <li><a class='nav-link' [routerLink]="['/products']">Product List</a></li>
+       </ul>
+</nav>   
+<div class='container'>
+  <router-outlet></router-outlet>
+</div> 
