--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   <div class="card-body">
     <div class="container-fluid">
       <div class="text-center">
-        <img src="./assets/images/samsunglogo.jpg"
+        <img src="./assets/images/vinoth.jpg"
              class="img-responsive center-block"
              style="max-height:300px;padding-bottom:50px" />
       </div>
