--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,56 +1,78 @@
-<div class='card'>
-    <div class='card-header'>
-        {{pageTitle}}
+<div class="card">
+    <div class="card-header">
+      {{pageTitle}}
     </div>
-    <div class='card-body'>
-        <div class='row'>
-            <div class='col-md-2'>Filter by:</div>
-            <div class='col-md-4'>
-                <input type='text' [(ngModel)]='listFilter'>
-            </div>
+  
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-2">Filter by:</div>
+        <div class="col-md-4">
+          <input type="text"
+                 [(ngModel)]="listFilter" />
         </div>
-        <div class='row'>
-            <div class='col-md-2'>
-                <h4>Filtered by: {{listFilter}}</h4>
-            </div>
+      </div>
+      <div class="row"
+           *ngIf="listFilter">
+        <div class="col-md-6">
+          <h4>Filtered by: {{listFilter}}</h4>
         </div>
-        <div class='table-responsive'>
-            <table class='table' *ngIf='products && products.length'>
-            <thead>
-                <tr>
-                    <!-- <th>
-                        <button class='btn btn-primary' (click)='toggleImage()'>
-                            {{showImage ? 'Hide': 'Show'}} Image
-                        </button>
-                    </th> -->
-                    <th>Grocery Name</th>
-                    <th>Price</th>
-                    <th class="alignCenter">Quantity In Stock</th>
-                    <th class="alignCenter">Stock Updated On</th>
-                    <th>5 Star Rating</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor='let product of filteredProducts'>
-                    <!-- <td>
-                        <img  *ngIf ='showImage'
-                            [src]='product.imageUrl' [title]='product.productName' [style.width.px]='imageWidth' [style.margin.px]='imageMargin'>
-                    </td> -->
-                    <td>
-                        <a [routerLink]="['/products', product.id]">
-                            {{ product.name | titlecase }}
-                        </a>
-                    </td>                    
-                    <td>{{ product.price | currency:'GBP':'symbol':'1.2-2'}}</td>
-                    <td class="alignCenter">{{ product.stockQty }}</td>
-                    <td class="alignCenter">{{ product.stockUpdatedOn | date: 'dd/MM/yyyy'}}</td>
-                    <td> 
-                        <pm-star [rating]='product.starRating'
-                                 (ratingClicked)='onRatingClicked($event)'></pm-star>
-                    </td>
-                </tr>
-            </tbody>
+      </div>
+  
+      <div class="table-responsive">
+        <table class="table mb-0"
+               *ngIf="products && products.length">
+          <thead>
+            <tr>
+              <!-- <th>
+                <button class="btn btn-outline-primary btn-sm"
+                        (click)="toggleImage()">
+                  {{showImage ? "Hide" : "Show"}} Image
+                </button>
+              </th> -->
+              <th>Fruit Name</th>
+              <th>Price</th>
+              <th class="alignCenter">Quantity In Stock</th>
+              <th class="alignCenter">Stock Updated On</th>
+              <th>5 Star Rating</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let product of filteredProducts">
+              <!-- <td>
+                <img *ngIf="showImage && product.imageUrl"
+                     [src]="product.imageUrl"
+                     [title]="product.productName"
+                     [style.width.px]="imageWidth"
+                     [style.margin.px]="imageMargin">
+              </td> -->
+              <td>
+                <a [routerLink]="['/products', product.id]">
+                  {{ product.productName | titlecase }}
+                </a>
+              </td>
+              <td>{{ product.price | currency:'GBP':'symbol':'1.2-2'}}</td>
+              <td class="alignCenter">{{ product.productQty }}</td>
+              <td class="alignCenter">{{ product.stockUpdatedOn | date: 'dd/MM/yyyy'}}</td>
+              <td>
+                <pm-star [rating]="product.starRating">
+                </pm-star>
+              </td>
+              <td>
+                <button class="btn btn-outline-primary btn-sm"
+                        [routerLink]="['/products', product.id, 'edit']">
+                  Edit
+                </button>
+              </td>
+            </tr>
+          </tbody>
         </table>
-        </div>
+      </div>
+  
     </div>
-</div>
+  </div>
+  
+  <div *ngIf="errorMessage"
+       class="alert alert-danger">
+    Error: {{ errorMessage }}
+  </div>
