--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -15,21 +15,17 @@
           <div class="col-md-6">{{product.productName}}</div>
         </div>
         <div class="row">
-          <div class="col-md-3">Code:</div>
-          <div class="col-md-6">{{product.productCode}}</div>
-        </div>
-        <div class="row">
-          <div class="col-md-3">Description:</div>
-          <div class="col-md-6">{{product.description}}</div>
-        </div>
-        <div class="row">
-          <div class="col-md-3">Availability:</div>
-          <div class="col-md-6">{{product.releaseDate}}</div>
-        </div>
-        <div class="row">
           <div class="col-md-3">Price:</div>
-          <div class="col-md-6">{{product.price|currency:"USD":"symbol"}}</div>
+          <div class="col-md-6">{{product.price| currency:'GBP':'symbol':'1.2-2'}}</div>
         </div>
+        <div class="row">
+          <div class="col-md-3">Quantity:</div>
+          <div class="col-md-6">{{product.productQty}}</div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">StockUpdatedOn:</div>
+          <div class="col-md-6">{{product.StockUpdatedOn}</div>
+        </div>        
         <div class="row">
           <div class="col-md-3">5 Star Rating:</div>
           <div class="col-md-6">
@@ -37,20 +33,20 @@
             </pm-star>
           </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-md-3">Tags:</div>
           <div class="col-md-6">{{product.tags}}</div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="col-md-4"
+      <!-- <div class="col-md-4"
            *ngIf="product.imageUrl">
         <img class="center-block img-responsive"
              [style.height.px]="150"
              [style.margin.px]="2"
              [src]="product.imageUrl"
              [title]="product.productName">
-      </div>
+      </div> -->
     </div>
 
     <div class="row mt-4">
